aggiunta entrata come ospite
Signed-off-by: Antonio Di Lauro <antonio02120212@gmail.com>

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -84,6 +84,20 @@
     .register-link a:hover {
       text-decoration: underline;
     }
+
+    .guest-link {
+      text-align: center;
+      margin-top: 20px;
+    }
+
+    .guest-link a {
+      color: #007bff;
+      text-decoration: none;
+    }
+
+    .guest-link a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -105,6 +119,9 @@
   </div>
   <div class="register-link">
     <a href="registrazione.html">Non hai un account? Registrati</a>
+  </div>
+  <div class="guest-link">
+    <a href="map.html">Entra come ospite</a>
   </div>
 </div>
 </body>
