Javascript for login and registration (WIP)

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -112,17 +112,18 @@
       <label for="password">Password</label>
       <input type="password" id="password" name="password" required>
     </div>
-    <button type="submit">Accedi</button>
+    <button type="submit" onclick="logIn()">Accedi</button>
   </form>
   <div class="forgot-password">
-    <a href="recovery.html">Hai dimenticato la password?</a>
+    <a href="../webapp/recovery.html">Hai dimenticato la password?</a>
   </div>
   <div class="register-link">
-    <a href="registrazione.html">Non hai un account? Registrati</a>
+    <a href="../webapp/registrazione.html">Non hai un account? Registrati</a>
   </div>
   <div class="guest-link">
-    <a href="map.html">Entra come ospite</a>
+    <a href="../webapp/map.html">Entra come ospite</a>
   </div>
 </div>
+<script src="login.js"></script>
 </body>
 </html>
