--- a/src/main/webapp/recovery.html
+++ b/src/main/webapp/recovery.html
@@ -87,7 +87,7 @@
         <button type="submit">Invia Email di Recupero</button>
     </form>
     <div class="back-link">
-        <a href="login.html">Torna al login</a>
+        <a href="../webapp/login.html">Torna al login</a>
     </div>
 </div>
 </body>
