--- a/src/main/webapp/registrazione.html
+++ b/src/main/webapp/registrazione.html
@@ -75,7 +75,7 @@
 <body>
 <div class="register-container">
     <h2>Registrazione</h2>
-    <form id="register-form">
+    <form method=post id="register-form">
         <div class="form-group">
             <label for="name">Nome</label>
             <input type="text" id="name" name="name" required>
@@ -87,6 +87,7 @@
         <div class="form-group">
             <label for="username">Username</label>
             <input type="text" id="username" name="username" required>
+            <span id="error_username" class="error_info"></span>
         </div>
         <div class="form-group">
             <label for="email">Email</label>
@@ -95,11 +96,12 @@
         <div class="form-group">
             <label for="password">Password</label>
             <input type="password" id="password" name="password" required>
+            <span id="error_Psw" class="error_info"></span>
         </div>
-        <button type="submit">Registrati</button>
+        <button type="submit" onclick="checkCampi()">Registrati</button>
     </form>
     <div class="back-link">
-        <a href="login.html">Torna al login</a>
+        <a href="../webapp/login.html">Torna al login</a>
     </div>
 </div>
 </body>
