--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -101,7 +101,6 @@
   </style>
 </head>
 <body>
-<script src="../webapp/login-server.js"></script>
 <div class="login-container">
   <h2>Mappatura disservizi urbani</h2>
   <form id="login-form" action="/login" method="post">
@@ -118,12 +117,16 @@
   <div class="forgot-password">
     <a href="../webapp/recovery.html">Hai dimenticato la password?</a>
   </div>
+  <form id="form-registrazione" action="/registrazione" method="get">
   <div class="register-link">
     <a href="../webapp/registrazione.html">Non hai un account? Registrati</a>
   </div>
+  </form>
+  <form id="form-guest" action="/map" method="get">
   <div class="guest-link">
     <a href="../webapp/map.html">Entra come ospite</a>
   </div>
+  </form>
 </div>
 <script>
   document.getElementById('login-form').addEventListener('submit', async (event) => {
@@ -131,6 +134,8 @@
     const formData = new FormData(event.target);
     const username = formData.get('username');
     const password = formData.get('password');
+    console.log("username:", username);
+    console.log("password:", password);
 
     // Send login request to server
     const response = await fetch('/login', {
@@ -141,10 +146,13 @@
 
     if (response.ok) {
       alert('Login successful');
+      window.location.href="map.html";
+      //manda a map.html
     } else {
       alert('Login failed: ' + await response.text());
     }
   });
 </script>
+<script src="../webapp/login-server.js"></script>
 </body>
 </html>
