Finalised login procedure, added logout funtion (WIP) connected login.html to other pages (WIP)

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -114,18 +114,20 @@
     </div>
     <button type="submit">Accedi</button>
   </form>
-  <div class="forgot-password">
-    <a href="../webapp/recovery.html">Hai dimenticato la password?</a>
-  </div>
+  <form id="form-recovery" action="/recovery" method="get">
+    <div class="forgot-password">
+      <button type="submit">Hai dimenticato la password?</button>
+    </div>
+  </form>
   <form id="form-registrazione" action="/registrazione" method="get">
-  <div class="register-link">
-    <a href="../webapp/registrazione.html">Non hai un account? Registrati</a>
-  </div>
+    <div class="register-link">
+      <button type="submit">Non hai un account? Registrati</button>
+    </div>
   </form>
   <form id="form-guest" action="/map" method="get">
-  <div class="guest-link">
-    <a href="../webapp/map.html">Entra come ospite</a>
-  </div>
+    <div class="guest-link">
+      <button type="submit">Entra come ospite</button>
+    </div>
   </form>
 </div>
 <script>
