--- a/src/main/webapp/map.html
+++ b/src/main/webapp/map.html
@@ -36,5 +36,12 @@
         })
     });
 </script>
+
+<form id="login-form" action="/logout" method="post">
+    <button type="submit">Logout</button>
+</form>
+
+<script src="../webapp/login-server.js"></script>
+<script src="../webapp/map.js"></script>
 </body>
 </html>
