--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -7,96 +7,59 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #008000; /* Colore verde per lo sfondo */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background-color: #4CAF50;
       margin: 0;
       padding: 0;
     }
 
     .login-container {
+      background-color: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      text-align: center;
+      width: 300px;
       max-width: 400px;
       margin: 100px auto;
-      padding: 20px;
-      background-color: #fff;
-      border-radius: 5px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
-
-    h2 {
+    .login-container h2 {
       text-align: center;
-      color: #8B4513; /* Colore marrone per il titolo */
-    }
-
-    .form-group {
       margin-bottom: 20px;
+      color: #8B4513;
     }
 
     label {
       display: block;
-      margin-bottom: 5px;
     }
 
     input[type="text"],
     input[type="password"] {
       width: 100%;
       padding: 10px;
+      margin: 10px 0;
       border: 1px solid #ccc;
-      border-radius: 3px;
+      border-radius: 5px;
+      box-sizing: border-box;
     }
 
     button {
       width: 100%;
       padding: 10px;
-      background-color: #007bff;
-      color: #fff;
+      background-color: #007BFF;
       border: none;
-      border-radius: 3px;
+      border-radius: 5px;
+      color: white;
+      font-size: 16px;
       cursor: pointer;
+      margin: 10px 0;
     }
 
     button:hover {
       background-color: #0056b3;
-    }
-
-    .forgot-password {
-      text-align: center;
-      margin-top: 10px;
-    }
-
-    .forgot-password a {
-      color: #007bff;
-      text-decoration: none;
-    }
-
-    .forgot-password a:hover {
-      text-decoration: underline;
-    }
-
-    .register-link {
-      text-align: center;
-      margin-top: 20px;
-    }
-
-    .register-link a {
-      color: #007bff;
-      text-decoration: none;
-    }
-
-    .register-link a:hover {
-      text-decoration: underline;
-    }
-
-    .guest-link {
-      text-align: center;
-      margin-top: 20px;
-    }
-
-    .guest-link a {
-      color: #007bff;
-      text-decoration: none;
-    }
-
-    .guest-link a:hover {
-      text-decoration: underline;
     }
   </style>
 </head>
@@ -105,12 +68,12 @@
   <h2>Mappatura disservizi urbani</h2>
   <form id="login-form" action="/login" method="post">
     <div class="form-group">
-      <label for="username">Username</label>
-      <input type="text" id="username" name="username" required>
+      <label for="username"></label>
+      <input type="text" id="username" name="username" placeholder="Username" required>
     </div>
     <div class="form-group">
-      <label for="password">Password</label>
-      <input type="password" id="password" name="password" required>
+      <label for="password"></label>
+      <input type="password" id="password" name="password" placeholder="Password" required>
     </div>
     <button type="submit">Accedi</button>
   </form>
