--- a/src/main/webapp/map.html
+++ b/src/main/webapp/map.html
@@ -6,42 +6,41 @@
     <title>Mappa OpenLayers</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol/dist/ol.css" type="text/css">
     <script src="https://cdn.jsdelivr.net/npm/ol/dist/ol.js"></script>
-    <style>
-        /* Stile per il contenitore della mappa */
-        #map {
-            width: 100%;
-            height: 800px;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div id="map" class="map"></div>
 
-<script>
-    // Coordinate per la posizione desiderata del centro
-    var longitude = 11.12;
-    var latitude =46.07 ;
+<div id="overlay"></div>
+<div id="modal">
+    <label for="tipo">Tipo di Segnalazione:</label>
+    <select id="tipo">
+        <option value="Problema Stradale">Problema Stradale</option>
+        <option value="Rifiuti">Rifiuti</option>
+        <option value="Altro">Altro</option>
+    </select>
+    <br>
+    <label for="commento">Commento:</label>
+    <textarea id="commento"></textarea>
+    <br>
+    <button onclick="aggiungiSegnalazione()">Aggiungi Segnalazione</button>
+    <button onclick="chiudiModal()">Annulla</button>
+</div>
 
-    // Inizializza la mappa OpenLayers
-    var map = new ol.Map({
-        target: 'map',
-        layers: [
-            new ol.layer.Tile({
-                source: new ol.source.OSM() // Usa OpenStreetMap come layer di base
-            })
-        ],
-        view: new ol.View({
-            center: ol.proj.fromLonLat([longitude, latitude]), // Imposta il centro della mappa
-            zoom: 13 // Imposta lo zoom iniziale
-        })
-    });
-</script>
+<div id="commentModal">
+    <div id="dettagliSegnalazione"></div>
+    <br>
+    <label for="nuovoCommento">Aggiungi un commento:</label>
+    <textarea id="nuovoCommento"></textarea>
+    <br>
+    <button onclick="aggiungiCommento()">Aggiungi Commento</button>
+    <button onclick="chiudiCommentModal()">Chiudi</button>
+</div>
 
 <form id="login-form" action="/logout" method="post">
     <button type="submit">Logout</button>
 </form>
 
-<script src="../webapp/login-server.js"></script>
-<script src="../webapp/map.js"></script>
+<script src="map.js"></script>
 </body>
 </html>
