--- a/src/main/webapp/registrazione.html
+++ b/src/main/webapp/registrazione.html
@@ -105,10 +105,10 @@
             <input type="password" id="password" name="password" required>
             <span id="error_password" class="error_info"></span>
         </div>
-        <button type="submit" onclick="checkCampi(event)">Registrati</button>
+        <button type="submit">Registrati</button>
     </form>
     <div class="back-link">
-        <a href="../webapp/login.html">Torna al login</a>
+        <a href="login.html">Torna al login</a>
     </div>
 </div>
 </body>
