--- a/src/main/webapp/map.html
+++ b/src/main/webapp/map.html
@@ -6,7 +6,39 @@
     <title>Mappa OpenLayers</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol/dist/ol.css" type="text/css">
     <script src="https://cdn.jsdelivr.net/npm/ol/dist/ol.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <style>
+        /* Stile per il contenitore della mappa */
+        #map {
+            width: 100%;
+            height: 800px;
+        }
+
+        #overlay {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            z-index: 1000;
+        }
+
+        #modal, #commentModal {
+            display: none;
+            position: absolute;
+            background-color: white;
+            padding: 10px;
+            border: 1px solid black;
+            z-index: 1001;
+        }
+
+        #modal {
+            width: 300px;
+            height: 200px;
+        }
+
+        #commentModal {
+            width: 300px;
+            height: 250px;
+        }
+    </style>
 </head>
 <body>
 <div id="map" class="map"></div>
@@ -37,10 +69,84 @@
     <button onclick="chiudiCommentModal()">Chiudi</button>
 </div>
 
+<script>
+    // Coordinate per la posizione desiderata del centro
+    var longitude = 11.12;
+    var latitude = 46.07;
+
+    // Inizializza la mappa OpenLayers
+    var map = new ol.Map({
+        target: 'map',
+        layers: [
+            new ol.layer.Tile({
+                source: new ol.source.OSM() // Usa OpenStreetMap come layer di base
+            })
+        ],
+        view: new ol.View({
+            center: ol.proj.fromLonLat([longitude, latitude]), // Imposta il centro della mappa
+            zoom: 13 // Imposta lo zoom iniziale
+        })
+    });
+
+    var selectedCoordinates;
+    var segnalazioniLayer = new ol.layer.Vector({
+        source: new ol.source.Vector()
+    });
+    map.addLayer(segnalazioniLayer);
+
+    map.on('click', function (evt) {
+        selectedCoordinates = ol.proj.toLonLat(evt.coordinate);
+        document.getElementById('modal').style.display = 'block';
+    });
+
+    function chiudiModal() {
+        document.getElementById('modal').style.display = 'none';
+    }
+
+    function chiudiCommentModal() {
+        document.getElementById('commentModal').style.display = 'none';
+    }
+
+    function aggiungiMarker(segnalazione) {
+        const coordinate = segnalazione.coordinate;
+        const marker = new ol.Feature({
+            geometry: new ol.geom.Point(ol.proj.fromLonLat(coordinate)),
+            tipo: segnalazione.tipo,
+            commento: segnalazione.commento
+        });
+
+        segnalazioniLayer.getSource().addFeature(marker);
+    }
+
+    function creaSegnalazione(tipo, commento, coordinate) {
+        fetch('/api/segnalazioni', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({
+                tipo: tipo,
+                commento: commento,
+                coordinate: coordinate
+            })
+        })
+            .then(response => response.json())
+            .then(data => {
+                aggiungiMarker(data);
+                chiudiModal();
+            });
+    }
+
+    function aggiungiSegnalazione() {
+        const tipo = document.getElementById('tipo').value;
+        const commento = document.getElementById('commento').value;
+
+        creaSegnalazione(tipo, commento, selectedCoordinates);
+    }
+</script>
+
 <form id="login-form" action="/logout" method="post">
     <button type="submit">Logout</button>
 </form>
-
-<script src="map.js"></script>
 </body>
 </html>
