--- a/src/main/webapp/registrazione.html
+++ b/src/main/webapp/registrazione.html
@@ -78,6 +78,7 @@
             font-size: 0.9em;
         }
     </style>
+    <script src="registrazione.js" defer></script>
 </head>
 <body>
 <div class="register-container">
