--- a/src/main/webapp/registrazione.html
+++ b/src/main/webapp/registrazione.html
@@ -78,7 +78,6 @@
             font-size: 0.9em;
         }
     </style>
-    <script src="registrazione.js" defer></script>
 </head>
 <body>
 <div class="register-container">
@@ -113,5 +112,7 @@
         <a href="login.html">Torna al login</a>
     </div>
 </div>
+<script>
+    <script src="registrazione.js" defer></script>
 </body>
 </html>
