--- a/src/main/webapp/map.html
+++ b/src/main/webapp/map.html
@@ -6,33 +6,7 @@
     <title>Mappa OpenLayers</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol/dist/ol.css" type="text/css">
     <script src="https://cdn.jsdelivr.net/npm/ol/dist/ol.js"></script>
-    <style>
-        #map {
-            width: 100%;
-            height: 800px;
-        }
-        #modal, #commentModal {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background: white;
-            padding: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-            z-index: 1000;
-        }
-        #overlay {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.5);
-            z-index: 999;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div id="map" class="map"></div>
@@ -63,118 +37,10 @@
     <button onclick="chiudiCommentModal()">Chiudi</button>
 </div>
 
-<script>
-    var isAuthenticated = true; // Imposta questa variabile in base all'autenticazione dell'utente
-
-    var map = new ol.Map({
-        target: 'map',
-        layers: [
-            new ol.layer.Tile({
-                source: new ol.source.OSM()
-            })
-        ],
-        view: new ol.View({
-            center: ol.proj.fromLonLat([11.12, 46.07]),
-            zoom: 13
-        })
-    });
-
-    var markersLayer = new ol.layer.Vector({
-        source: new ol.source.Vector(),
-        style: new ol.style.Style({
-            image: new ol.style.Icon({
-                src: 'https://openlayers.org/en/latest/examples/data/icon.png',
-                anchor: [0.5, 1],
-                scale: 0.1
-            })
-        })
-    });
-
-    map.addLayer(markersLayer);
-
-    var currentCoordinates;
-
-    map.on('singleclick', function (evt) {
-        currentCoordinates = ol.proj.toLonLat(evt.coordinate);
-        if (isAuthenticated) {
-            document.getElementById('overlay').style.display = 'block';
-            document.getElementById('modal').style.display = 'block';
-        } else {
-            alert("Devi essere autenticato per aggiungere segnalazioni.");
-        }
-    });
-
-    function aggiungiSegnalino(longitude, latitude, tipo, commento) {
-        var marker = new ol.Feature({
-            geometry: new ol.geom.Point(ol.proj.fromLonLat([longitude, latitude])),
-            tipo: tipo,
-            commento: commento
-        });
-
-        markersLayer.getSource().addFeature(marker);
-
-        marker.on('click', function () {
-            mostraCommentModal(marker);
-        });
-    }
-
-    function mostraCommentModal(marker) {
-        document.getElementById('dettagliSegnalazione').innerText = `Tipo: ${marker.get('tipo')}\nCommento: ${marker.get('commento')}`;
-        document.getElementById('commentModal').style.display = 'block';
-        document.getElementById('overlay').style.display = 'block';
-    }
-
-    function chiudiModal() {
-        document.getElementById('modal').style.display = 'none';
-        document.getElementById('overlay').style.display = 'none';
-    }
-
-    function chiudiCommentModal() {
-        document.getElementById('commentModal').style.display = 'none';
-        document.getElementById('overlay').style.display = 'none';
-    }
-
-    function aggiungiSegnalazione() {
-        var tipo = document.getElementById('tipo').value;
-        var commento = document.getElementById('commento').value;
-        var longitude = currentCoordinates[0];
-        var latitude = currentCoordinates[1];
-
-        aggiungiSegnalino(longitude, latitude, tipo, commento);
-
-        fetch('/api/segnalazioni', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json'
-            },
-            body: JSON.stringify({
-                tipo: tipo,
-                commento: commento,
-                longitude: longitude,
-                latitude: latitude,
-                dataOra: new Date()
-            })
-        })
-            .then(response => response.json())
-            .then(data => {
-                console.log('Success:', data);
-                chiudiModal();
-            })
-            .catch((error) => {
-                console.error('Error:', error);
-            });
-    }
-
-    function aggiungiCommento() {
-        var nuovoCommento = document.getElementById('nuovoCommento').value;
-        // Logica per aggiungere il commento
-    }
-</script>
-
 <form id="login-form" action="/logout" method="post">
     <button type="submit">Logout</button>
 </form>
 
-<script src="../webapp/login-server.js"></script>
+<script src="map.js"></script>
 </body>
 </html>
