--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -155,6 +155,6 @@
     }
   });
 </script>
-<script src="../webapp/login-server.js"></script>
+<script src="../webapp/server.js"></script>
 </body>
 </html>
